HND-59 Adds lessons model and creates prompt to trail
